--- a/src/components/health-form/health-form.scss
+++ b/src/components/health-form/health-form.scss
@@ -1,67 +1,72 @@
 .health-form-outer {
-  background: #f8f9fa;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 35px 144px;
-}
-
-.health-form-wrapper {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-
-  &-form {
-    margin-right: 70px;
-
-    .covid {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-
-      .ant-form-item-label {
-        padding: 0;
-        margin-right: 37px;
-      }
-    }
-
-    .description {
-      font-family: 'Poppins', sans-serif;
-      font-weight: 300;
-      font-size: 11px;
-      line-height: 16px;
-      color: #646464;
-      height: 20px;
-      margin-bottom: 16px;
-      margin-left: 25px;
-      margin-top: 5px;
-    }
-
-    .ant-radio-group-outline {
-      display: flex;
-      flex-direction: column;
-
-      .ant-radio-wrapper {
-      }
-    }
-
-    &--title {
-      font-family: 'Poppins', sans-serif;
-      font-weight: 600;
-      font-size: 28px;
-      line-height: 42px;
-      color: #343F56;
-      margin-bottom: 32px;
-    }
-  }
-
-  &-img {
+    background: #f8f9fa;
     display: flex;
     align-items: center;
     justify-content: center;
-    img {
-      width: 633px;
-      height: 599px;
+    padding: 35px 144px;
+}
+
+.health-form-wrapper {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    &-form {
+        margin-right: 70px;
+        .covid {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            .ant-form-item-label {
+                padding: 0;
+                margin-right: 37px;
+            }
+        }
+        .description {
+            font-family: 'Poppins', sans-serif;
+            font-weight: 300;
+            font-size: 11px;
+            line-height: 16px;
+            color: #646464;
+            height: 20px;
+            margin-bottom: 16px;
+            margin-left: 25px;
+            margin-top: 5px;
+        }
+        .ant-radio-group-outline {
+            display: flex;
+            flex-direction: column;
+            .ant-radio-wrapper {}
+        }
+        &--title {
+            font-family: 'Poppins', sans-serif;
+            font-weight: 600;
+            font-size: 28px;
+            line-height: 42px;
+            color: #343F56;
+            margin-bottom: 32px;
+        }
+        &--input {
+            border-radius: 10px;
+            border: 1px solid rgba(203, 203, 203, 1);
+            color: #292A2E;
+            font-size: 14px;
+            .ant-input:focus {
+                border-color: rgba(123, 92, 250, 1) !important;
+            }
+        }
+        .submit-button {
+            background-color: rgba(123, 92, 250, 0.15);
+            border: 1px solid rgba(123, 92, 250, 1);
+            color: rgba(123, 92, 250, 1);
+        }
     }
-  }
+    &-img {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img {
+            width: 633px;
+            height: 599px;
+        }
+    }
 }
