--- a/src/components/steps/steps.styles.scss
+++ b/src/components/steps/steps.styles.scss
@@ -1,128 +1,117 @@
 .steps_outer {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
 }
 
 .technique_outer {
-  display: flex;
-  min-height: 512px;
-  max-height: 512px;
-  padding: 106px 55px 51px 107px;
-  background: #f8f9fa;
-
-  &_left {
-    padding-right: 100px;
-    &--title {
-      font-family: 'Poppins', sans-serif;
-      font-weight: 600;
-      font-size: 28px;
-      line-height: 42px;
-      color: #343F56;
-      margin-bottom: 20px;
-    }
-
-    &--description {
-      display: flex;
-      margin-bottom: 48px;
-
-      img {
-        width: 35px;
-        height: 30px;
-        margin-right: 20px;
-      }
-
-      div {
-        font-family: 'Poppins', sans-serif;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 24px;
-        color: #343F56;
-      }
-    }
-
-    &--requirements-title {
-      font-family: 'Poppins', sans-serif;
-      font-weight: 600;
-      font-size: 18px;
-      line-height: 27px;
-      color: #343F56;
-      margin-bottom: 20px;
-    }
-
-    &--requirements-items {
-
-      margin-bottom: 32px;
-
-      &--item {
-        display: flex;
-        align-items: center;
-        margin-bottom: 9px;
-
-        img {
-          width: 40px;
-          margin-right: 20px;
+    display: flex;
+    min-height: 512px;
+    max-height: 512px;
+    padding: 106px 55px 51px 107px;
+    background: #f8f9fa;
+    &_left {
+        padding-right: 100px;
+        &--title {
+            font-family: 'Poppins', sans-serif;
+            font-weight: 600;
+            font-size: 28px;
+            line-height: 42px;
+            color: #343F56;
+            margin-bottom: 20px;
         }
-
-        div {
-          font-family: 'Poppins', sans-serif;
-          font-weight: 400;
-          font-size: 16px;
-          line-height: 24px;
-          color: #343F56;
+        &--description {
+            display: flex;
+            margin-bottom: 48px;
+            img {
+                width: 35px;
+                height: 30px;
+                margin-right: 20px;
+            }
+            div {
+                font-family: 'Poppins', sans-serif;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 24px;
+                color: #343F56;
+            }
         }
-      }
+        &--requirements-title {
+            font-family: 'Poppins', sans-serif;
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 27px;
+            color: #343F56;
+            margin-bottom: 20px;
+        }
+        &--requirements-items {
+            margin-bottom: 32px;
+            &--item {
+                display: flex;
+                align-items: center;
+                margin-bottom: 9px;
+                img {
+                    width: 40px;
+                    margin-right: 20px;
+                }
+                div {
+                    font-family: 'Poppins', sans-serif;
+                    font-weight: 400;
+                    font-size: 16px;
+                    line-height: 24px;
+                    color: #343F56;
+                }
+            }
+        }
+        .next-button {
+            background-color: rgba(54, 124, 255, 0.15);
+            border: 1px solid rgba(54, 124, 255, 1);
+            color: rgba(54, 124, 255, 1);
+        }
     }
-  }
 }
 
 .restrictions_outer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #7B5CFA;
-  min-height: 512px;
-  max-height: 512px;
-
-  &-left {
-    margin-right: 70px;
-  }
-
-  &-right {
-
-    &--title {
-      font-family: 'Poppins', sans-serif;
-      font-weight: 600;
-      font-size: 28px;
-      line-height: 42px;
-      color: #FFFFFF;
-      margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #7B5CFA;
+    min-height: 512px;
+    max-height: 512px;
+    &-left {
+        margin-right: 70px;
     }
-
-    &--item {
-      display: flex;
-      align-items: center;
-      margin-bottom: 12px;
-      margin-left: 20px;
-
-      span {
-        width: 5px;
-        height: 5px;
-        background: #FFFFFF;
-        border-radius: 50%;
-        margin-right: 20px;
-      }
-
-      div {
-        font-family: 'Poppins', sans-serif;
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 27px;
-        display: flex;
-        align-items: center;
-        color: #FFFFFF;
-      }
+    &-right {
+        &--title {
+            font-family: 'Poppins', sans-serif;
+            font-weight: 600;
+            font-size: 28px;
+            line-height: 42px;
+            color: #FFFFFF;
+            margin-bottom: 30px;
+        }
+        &--item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 12px;
+            margin-left: 20px;
+            span {
+                width: 5px;
+                height: 5px;
+                background: #FFFFFF;
+                border-radius: 50%;
+                margin-right: 20px;
+            }
+            div {
+                font-family: 'Poppins', sans-serif;
+                font-weight: 400;
+                font-size: 18px;
+                line-height: 27px;
+                display: flex;
+                align-items: center;
+                color: #FFFFFF;
+            }
+        }
     }
-  }
 }
