--- a/src/components/health-form/health-form.scss
+++ b/src/components/health-form/health-form.scss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 35px 144px;
+    padding: 35px 87px 35px 144px;
 }
 
 .health-form-wrapper {
@@ -50,7 +50,12 @@
             border: 1px solid rgba(203, 203, 203, 1);
             color: #292A2E;
             font-size: 14px;
-            .ant-input:focus {
+            &:focus {
+                box-shadow: none;
+                border-color: rgba(123, 92, 250, 1) !important;
+            }
+            &:hover {
+                box-shadow: none;
                 border-color: rgba(123, 92, 250, 1) !important;
             }
         }
@@ -58,6 +63,10 @@
             background-color: rgba(123, 92, 250, 0.15);
             border: 1px solid rgba(123, 92, 250, 1);
             color: rgba(123, 92, 250, 1);
+            &:hover {
+                background-color: rgba(123, 92, 250, 0.8);
+                color: white;
+            }
         }
     }
     &-img {
